--- a/package.json
+++ b/package.json
@@ -16,12 +16,20 @@
     "react-dom": "^15.6.1",
     "react-onclickoutside": "^6.4.0",
     "taffy": "^2.6.2",
-    "tether": "^1.4.0"
+    "tether": "^1.4.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "webpack": "^3.4.1"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^2.30.1",
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1"
   },
   "scripts": {
+    "start": "webpack-dev-server --env development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Summit Route LLC",
