--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-structured-filter",
   "version": "1.0.0",
   "description": "",
-  "main": "gulpfile.js",
+  "main": "index.js",
   "dependencies": {
     "es6-promise": "*",
     "fuzzy": "^0.1.3",
@@ -29,7 +29,7 @@
     "webpack-dev-server": "^2.6.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --env development",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Summit Route LLC",
